--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,5 +1,40 @@
 <div class="flex-grow-1 h-100 border bg-light">
-  <form>
+  <style type="text/css">
+    .tabs { width: 100%; height: 100%; padding: 0px; margin: 0 auto; }
+    .tabs>input { display: none; }
+    .tabs>div {
+        display: none;
+        padding: 7px;
+        border: 1px solid #C0C0C0;
+        background: #FFFFFF;
+    }
+    .tabs>label {
+        display: inline-block;
+        padding: 7px;
+        margin: 0 -5px -1px 0;
+        text-align: center;
+        color: #666666;
+        border: 1px solid #C0C0C0;
+        background: #E0E0E0;
+        cursor: pointer;
+    }
+    .tabs>input:checked + label {
+        color: #000000;
+        border: 1px solid #C0C0C0;
+        border-bottom: 1px solid #FFFFFF;
+        background: #FFFFFF;
+    }
+    #tab_1:checked ~ #txt_1,
+    #tab_2:checked ~ #txt_2,
+    #tab_3:checked ~ #txt_3,
+    #tab_4:checked ~ #txt_4 { display: block; }
+  </style>
+  <div class="tabs h-100">
+    <input type="radio" name="inset" value="" id="tab_1" checked>
+    <label for="tab_1">Пользователи <i class="fa fa-times-circle-o"></i></label>    
+    {# <div class="btn-group btn-group-sm" align="" style="">
+      <li class="btn"><a class="nav-link"></a></li> 
+    </div>  #}
     {# <div class="page-header">
       <div class="container-fluid">
         <div class="pull-right">
@@ -13,30 +48,34 @@
         </ul>
       </div>
     </div> #}  
-    <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
-      <li class="btn">
-        <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
-        <i class="fa fa-1x fa-plus-circle"></i>Добавить</a>
-      </li> 
-      <li class="btn"><a class="nav-link">Редактировать</a></li>     
-      <li class="btn"><a class="nav-link" onclick="user_delete()">Удалить</a></li>               
-      <li class="dropdown btn">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item">Обновить</a></li>
-          <li><a class="dropdown-item">Дополнительно</a></li>
-          <li><hr class="dropdown-divider"></li>
-          {# <li>
-            <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
-          </li> #}
-        </ul>
-      </li>         
-    </div>    
-    <div class="h-100" style="overflow-y:scroll; overflow-x:scroll;">            
-      <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"> 
-      </table>
-    </div> 
-  </form>
+    <div id="txt_1" class="">
+      <div class="btn-toolbar" role="toolbar" aria-label="Панель инструментов с группами кнопок" >
+        <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
+          <li class="btn">
+            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
+            <i class="fa fa-user-plus"></i>Добавить</a>
+          </li> 
+          <li class="btn"><a class="nav-link"><i class="fa fa-pencil fa-fw"></i>Редактировать</a></li>     
+          <li class="btn"><a class="nav-link" onclick="user_delete()"><i class="fa fa-user-times"></i>Удалить</a></li>               
+          <li class="dropdown btn">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item"><i class="fa fa-refresh fa-spin"></i>Обновить</a></li>
+              <li><a class="dropdown-item">Дополнительно</a></li>
+              <li><hr class="dropdown-divider"></li>
+              {# <li>
+                <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
+              </li> #}
+            </ul>
+          </li>         
+        </div>    
+        {# <div class="btn-group btn-group-sm w-100" align="justify"></div> #}            
+      </div>     
+      <div class="h-100" style="overflow-y:scroll; overflow-x:scroll;">            
+        <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"></table>
+      </div> 
+    </div>  
+  </div>
 </div>
 {# {% include "./security.twig" %} #}
 {# Modal #}
