--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,37 +1,11 @@
 <div class="flex-grow-1 h-100 border bg-light">
-  <style type="text/css">
-    .tabs { width: 100%; height: 100%; padding: 0px; margin: 0 auto; }
-    .tabs>input { display: none; }
-    .tabs>div {
-        display: none;
-        padding: 7px;
-        border: 1px solid #C0C0C0;
-        background: #FFFFFF;
-    }
-    .tabs>label {
-        display: inline-block;
-        padding: 7px;
-        margin: 0 -5px -1px 0;
-        text-align: center;
-        color: #666666;
-        border: 1px solid #C0C0C0;
-        background: #E0E0E0;
-        cursor: pointer;
-    }
-    .tabs>input:checked + label {
-        color: #000000;
-        border: 1px solid #C0C0C0;
-        border-bottom: 1px solid #FFFFFF;
-        background: #FFFFFF;
-    }
-    #tab_1:checked ~ #txt_1,
-    #tab_2:checked ~ #txt_2,
-    #tab_3:checked ~ #txt_3,
-    #tab_4:checked ~ #txt_4 { display: block; }
-  </style>
-  <div class="tabs h-100">
-    <input type="radio" name="inset" value="" id="tab_1" checked>
-    <label for="tab_1">Пользователи <i class="fa fa-times-circle-o"></i></label>    
+  <nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users</button>
+      {# <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
+      <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button> #}
+    </div>
+  </nav> 
     {# <div class="btn-group btn-group-sm" align="" style="">
       <li class="btn"><a class="nav-link"></a></li> 
     </div>  #}
@@ -48,34 +22,36 @@
         </ul>
       </div>
     </div> #}  
-    <div id="txt_1" class="">
-      <div class="btn-toolbar" role="toolbar" aria-label="Панель инструментов с группами кнопок" >
-        <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
-          <li class="btn">
-            <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
-            <i class="fa fa-user-plus"></i>Добавить</a>
-          </li> 
-          <li class="btn"><a class="nav-link"><i class="fa fa-pencil fa-fw"></i>Редактировать</a></li>     
-          <li class="btn"><a class="nav-link" onclick="user_delete()"><i class="fa fa-user-times"></i>Удалить</a></li>               
-          <li class="dropdown btn">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item"><i class="fa fa-refresh fa-spin"></i>Обновить</a></li>
-              <li><a class="dropdown-item">Дополнительно</a></li>
-              <li><hr class="dropdown-divider"></li>
-              {# <li>
-                <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
-              </li> #}
-            </ul>
-          </li>         
-        </div>    
-        {# <div class="btn-group btn-group-sm w-100" align="justify"></div> #}            
-      </div>     
-      <div class="h-100" style="overflow-y:scroll; overflow-x:scroll;">            
-        <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"></table>
-      </div> 
-    </div>  
-  </div>
+    {# <div id="txt_1" class=""> #}
+    <div class="tab-content" id="nav-tabContent">
+      <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+        <div class="btn-toolbar" role="toolbar" aria-label="Панель инструментов c группами кнопок">
+          <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
+            <li class="btn">
+              <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
+              <i class="fa fa-user-plus"></i>Добавить</a>
+            </li> 
+            <li class="btn"><a class="nav-link"><i class="fa fa-pencil fa-fw"></i>Редактировать</a></li>     
+            <li class="btn"><a class="nav-link" onclick="user_delete()"><i class="fa fa-user-times"></i>Удалить</a></li>               
+            <li class="dropdown btn">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item"><i class="fa fa-refresh fa-spin"></i>Обновить</a></li>
+                <li><a class="dropdown-item">Дополнительно</a></li>
+                <li><hr class="dropdown-divider"></li>
+                {# <li>
+                  <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
+                </li> #}
+              </ul>
+            </li>         
+          </div>    
+          {# <div class="btn-group btn-group-sm w-100" align="justify"></div> #}            
+        </div>     
+        <div class="h-100" style="overflow-y:scroll; overflow-x:scroll;">            
+          <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"></table>
+        </div> 
+      </div>  
+    </div>       
 </div>
 {# {% include "./security.twig" %} #}
 {# Modal #}
