--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -25,32 +25,33 @@
     {# <div id="txt_1" class=""> #}
     <div class="tab-content" id="nav-tabContent">
       <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-        <div class="btn-toolbar" role="toolbar" aria-label="Панель инструментов c группами кнопок">
-          <div class="btn-group btn-group-sm" align="left" style="background-color:LightSlateGray">
-            <li class="btn">
-              <a class="nav-link" data-bs-toggle="modal" data-bs-target="#usersModal">
-              <i class="fa fa-user-plus"></i>Добавить</a>
-            </li> 
-            <li class="btn"><a class="nav-link"><i class="fa fa-pencil fa-fw"></i>Редактировать</a></li>     
-            <li class="btn"><a class="nav-link" onclick="user_delete()"><i class="fa fa-user-times"></i>Удалить</a></li>               
-            <li class="dropdown btn">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item"><i class="fa fa-refresh fa-spin"></i>Обновить</a></li>
-                <li><a class="dropdown-item">Дополнительно</a></li>
-                <li><hr class="dropdown-divider"></li>
-                {# <li>
-                  <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
-                </li> #}
-              </ul>
-            </li>         
-          </div>    
-          {# <div class="btn-group btn-group-sm w-100" align="justify"></div> #}            
-        </div>     
-        <div class="h-100" style="overflow-y:scroll; overflow-x:scroll;">            
-          <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"></table>
-        </div> 
-      </div>  
+        {# <div class="btn-toolbar" role="toolbar" aria-label="Панель инструментов c группами кнопок"> #}
+        <div class="btn-group btn-group-sm" role="group" style="color: aquamarine; background-color:LightSlateGray">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#usersModal">
+            <i class="fa fa-user-plus"></i>Добавить</a>
+          </button> 
+          <button type="button" class="btn btn-primary"><i class="fa fa-pencil fa-fw"></i>Редактировать</button>   
+          <button type="button" class="btn btn-primary">Копировать</button>  
+          <button type="button" class="btn btn-primary" onclick="user_delete()"><i class="fa fa-user-times"></i>Удалить</button>               
+          {# <li class="dropdown btn"> #}
+          <div class="btn-group btn-group-sm" role="group">
+            {# <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a> #}
+            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
+            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+              <li><a class="dropdown-item"><i class="fa fa-refresh"></i>Обновить</a></li>
+              <li><a class="dropdown-item">Дополнительно</a></li>
+              <li><hr class="dropdown-divider"></li>
+              {# <li>
+                <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
+              </li> #}
+            </ul>
+          </li>         
+        </div>    
+        {# <div class="btn-group btn-group-sm w-100" align="justify"></div> #}            
+      </div>        
+      <div class="h-100 overflow-scroll"> {#style="overflow-y:scroll; overflow-x:scroll;">#}
+        <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"></table>
+      </div>       
     </div>       
 </div>
 {# {% include "./security.twig" %} #}
