--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -2,57 +2,36 @@
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users</button>
-      {# <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
-      <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button> #}
+      <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Dashboard</button>
+      {# <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button> #}
     </div>
-  </nav> 
-    {# <div class="btn-group btn-group-sm" align="" style="">
-      <li class="btn"><a class="nav-link"></a></li> 
-    </div>  #}
-    {# <div class="page-header">
-      <div class="container-fluid">
-        <div class="pull-right">
-          <button type="button" id="button-setting" title="{{ button_setting }}" data-loading-text="{{ text_loading }}" class="btn btn-info"><i class="fa fa-cog"></i></button>
-        </div>
-        <h4>{{ heading_title }}</h4>
-        <ul class="breadcrumb bg-light">
-          {% for breadcrumb in breadcrumbs %}
-            <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div> #}  
-    {# <div id="txt_1" class=""> #}
-    <div class="tab-content" id="nav-tabContent">
-      <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-        {# <div class="btn-toolbar" role="toolbar" aria-label="Панель инструментов c группами кнопок"> #}
-        <div class="btn-group btn-group-sm" role="group" style="color: aquamarine; background-color:LightSlateGray">
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+      <div class="btn-toolbar" role="toolbar" aria-label="Панель инструментов c группами кнопок">
+        <div class="btn-group btn-group-sm" role="group">
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#usersModal">
-            <i class="fa fa-user-plus"></i>Добавить</a>
+            <i class="fa fa-user-plus"></i>Добавить
           </button> 
           <button type="button" class="btn btn-primary"><i class="fa fa-pencil fa-fw"></i>Редактировать</button>   
           <button type="button" class="btn btn-primary">Копировать</button>  
-          <button type="button" class="btn btn-primary" onclick="user_delete()"><i class="fa fa-user-times"></i>Удалить</button>               
-          {# <li class="dropdown btn"> #}
-          <div class="btn-group btn-group-sm" role="group">
-            {# <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true"></a> #}
+          <button type="button" class="btn btn-primary" onclick="user_delete()"><i class="fa fa-user-times"></i>Удалить</button>                           
+          <div class="btn-group btn-group-sm" role="group">              
             <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
             <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
               <li><a class="dropdown-item"><i class="fa fa-refresh"></i>Обновить</a></li>
               <li><a class="dropdown-item">Дополнительно</a></li>
               <li><hr class="dropdown-divider"></li>
-              {# <li>
-                <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#usersModal">...</a>      
-              </li> #}
-            </ul>
-          </li>         
-        </div>    
-        {# <div class="btn-group btn-group-sm w-100" align="justify"></div> #}            
+              <li><a class="dropdown-item">...</a></li>
+            </ul>                
+          </div>    
+        </div>      
       </div>        
-      <div class="h-100 overflow-scroll"> {#style="overflow-y:scroll; overflow-x:scroll;">#}
+      <div class="h-100 overflow-scroll"> 
         <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"></table>
-      </div>       
-    </div>       
+      </div>
+    </div>
+  </div>       
 </div>
 {# {% include "./security.twig" %} #}
 {# Modal #}
