--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -1,8 +1,8 @@
 <div class="flex-grow-1 h-100 border bg-light">
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users</button>
-      <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Dashboard</button>
+      <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Users&nbsp;&nbsp;<i class="fa fa-times"></i></button>
+      <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Dashboard&nbsp;&nbsp;<i class="fa fa-times"></i></button>
       {# <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button> #}
     </div>
   </nav>
@@ -13,8 +13,8 @@
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#usersModal">
             <i class="fa fa-user-plus"></i>Добавить
           </button> 
-          <button type="button" class="btn btn-primary"><i class="fa fa-pencil fa-fw"></i>Редактировать</button>   
-          <button type="button" class="btn btn-primary">Копировать</button>  
+          <button type="button" class="btn btn-primary"><i class="fa fa-edit"></i>Редактировать</button>   
+          <button type="button" class="btn btn-primary"><i class="fa fa-clone" aria-hidden="true"></i>Копировать</button>  
           <button type="button" class="btn btn-primary" onclick="user_delete()"><i class="fa fa-user-times"></i>Удалить</button>                           
           <div class="btn-group btn-group-sm" role="group">              
             <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
