--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -48,17 +48,26 @@
             <div class="input-group">
               <input type="text" name="username" value="" placeholder="Name" id="input-username" class="form-control"/>            
             </div>            
-            <label for="input-password">Password:</label>            
-            <div class="input-group">
-              <input type="password" name="password" value="" placeholder="Password" id="input-password" class="form-control"/>                            
-            </div>              
             <label for="input-descr">Descr:</label>
             <div class="input-group">
-              <input type="text" name="Descr" value="" placeholder="Descr" id="input-descr" class="form-control"/>            
-            </div>             
+              <input type="text" name="Descr" value="" placeholder="Full name" id="input-descr" class="form-control"/>            
+            </div>  
             <label for="input-email">E-mail:</label>
             <div class="input-group">
               <input type="text" name="email" value="" placeholder="email@example.com" id="input-email" class="form-control"/>            
+            </div> 
+            {# <hr class="form-group-divider"> #}
+            <label for="input-password">Password:</label>            
+            <div class="input-group">
+              <input type="password" name="password" value="" placeholder="Password" id="input-password" class="form-control"/>                            
+            </div>                                     
+            <label for="input-Cpassword">Confirm password:</label>            
+            <div class="input-group">
+              <input type="password" name="Cpassword" value="" placeholder="Password" id="input-Cpassword" class="form-control"/>                            
+            </div>  
+            <label for="input-eauth">Enterprise authentication:</label>            
+            <div class="form-group">
+              <input type="checkbox" class="form-check-input" name="eauth" id="input-eauth"  checked/>
             </div>  
           </form>  
       </div>
