--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -28,7 +28,7 @@
         </div>       
       </div>        
       <div class="h-100 overflow-scroll"> 
-        <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive" onclick="row_select()"></table>
+        <table id = "user_table"  class="table table-striped table-hover table-sm table-responsive"></table>
       </div>
     </div>
   </div>       
