--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -1,3 +1,7 @@
+:root{
+	--bs-nav-link-color: #00ff93;
+	--bs-btn-active-bg: #282c34;
+}
 *, *::after, *::before{
 	padding: 0;
 	margin: 0;
@@ -6,7 +10,6 @@
 html{
 	height: 100%;
 }
-
 body {	
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 	  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -60,7 +63,7 @@ footer {
 }
 a:hover{
 	color: #00ff93;
-	transition: color .3s linear;
+	transition: all .3s linear;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -81,7 +84,7 @@ h1, h2, h3, h4, h5, h6, p {
 	color: aquamarine;
 }
 .nav-link{
-	border: 1px solid transparent !important;
+	border: 1px solid transparent;
 }
 .nav-link:hover,
 .btn:hover,
@@ -92,7 +95,7 @@ h1, h2, h3, h4, h5, h6, p {
 	transition: all .2s linear;
 }
 .btn-primary:hover{
-	color: #58fcb8 !important;
+
 	background-color: #282c34  !important;
 	border-color: aquamarine !important;
 	transition: all .2s linear;
