--- a/views/stylesheet/stylesheet.css
+++ b/views/stylesheet/stylesheet.css
@@ -1,3 +1,7 @@
+:root{
+	--bs-nav-link-color: #00ff93;
+	--bs-btn-active-bg: #282c34;
+}
 *, *::after, *::before{
 	padding: 0;
 	margin: 0;
@@ -6,7 +10,6 @@
 html{
 	height: 100%;
 }
-
 body {	
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 	  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -58,7 +61,10 @@ footer {
 	background-color: #282c34;
 	flex-wrap: wrap;
 }
-
+a:hover{
+	color: #00ff93;
+	transition: all .3s linear;
+}
 
 h1, h2, h3, h4, h5, h6, p {
 	margin-top: auto;
@@ -78,7 +84,7 @@ h1, h2, h3, h4, h5, h6, p {
 	color: aquamarine;
 }
 .nav-link{
-	border: 1px solid transparent !important;
+	border: 1px solid transparent;
 }
 .nav-link:hover,
 .btn:hover,
@@ -86,9 +92,10 @@ h1, h2, h3, h4, h5, h6, p {
 	color: #00ff93 !important;
 	border: 1px solid #00ff92 !important;
 	border-radius: 8px;
+	transition: all .2s linear;
 }
 .btn-primary:hover{
-	color: #58fcb8 !important;
+
 	background-color: #282c34  !important;
 	border-color: aquamarine !important;
 	transition: all .2s linear;
