--- a/views/index.twig
+++ b/views/index.twig
@@ -8,6 +8,7 @@
         <script defer src="./common.js"></script>
         <script defer src="./@popperjs/core/dist/umd/popper.min.js"></script>
         <script defer src="./js/bootstrap.min.js"></script>
+        <link rel="icon" type="image/x-icon" href="{{ shortIcon }}">
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <link href="./font-awesome/css/font-awesome.min.css" rel="stylesheet">
         <link href="./stylesheet/stylesheet.css" rel="stylesheet">
