--- a/views/template/common/header.twig
+++ b/views/template/common/header.twig
@@ -12,7 +12,7 @@
                 <a class="nav-link" aria-current="page" href="#">Конфигурация</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#" onclick="show_user_table()">Пользователи</a>
+                <a class="nav-link" aria-current="page" href="#" onclick="show_user_table()">{{ text_users }}</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link d-flex gap-1 align-items-center" aria-current="page" href="#">
